[package]
name = "hedgehog"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
thiserror = "*"
color-eyre = "*"

bit-vec = "*"
crossbeam-queue = "*"
rand = { version = "*", features = ["small_rng"] }
tracing = "*"
tracing-subscriber = "*"

num_cpus = "*"
memory-stats = "*"

## example: flurry
flurry = "*"
rpds = "*"

tempfile = "*"
